experimental/parser/testdata/parser/range/reserved_syntax.proto.stderr.txt
error: cannot use identifiers in reserved range in syntax mode
  --> testdata/parser/range/reserved_syntax.proto:20:14
   |
15 | syntax = "proto2";
   | ------------------ syntax mode is specified here
...
20 |     reserved foo, "foo";
   |              ^^^
  help: quote it to make it into a string literal
   |
20 |     reserved "foo", "foo";
   |              +   +

encountered 1 error
